# magmadnn

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  doxygen.config  make.device  makefile
.github/ISSUE_TEMPLATE/: bug_report.md  build-install-issue-request.md  documentation-issue-request.md  feature_request.md  performance-issue-bug.md
.github/workflows/: main.yml
cmake/: build_helpers.cmake  create_test.cmake  install_helpers.cmake  mkldnn.cmake
docs/: contributing.md  intro.md  todo.md  troubleshooting.md
examples/: Arguments.h  CMakeLists.txt  alexnet.cpp  cifar10_interactive.cpp  cnn_2d.cpp  cnn_2d_cpu.cpp  distributed.cpp  distributed_momentum_sgd.cpp  h5_example.cpp  half.hpp  lenet5.cpp  makefile  mnist_interactive.cpp  resnet.cpp  resnet18.cpp  resnet50.cpp  resnet_cifar10.cpp  simple_network.cpp  tensor_math.cpp  vgg16.cpp
include/: danielnn.h  data_types.h  exception.h  exception_helpers.h  fill_utilities_device.h  fill_utilities_host.h  init_finalize.h  layer.h  magmadnn.h  math.h  mdnn_device_types.h  memory_utilities.h  memorymanager.h  skepsi.h  tensor.h  tensor_utilities.h  types.h  utilities_internal.h  wrapper.h
make.inc-examples/: make.inc-standard
models/: alexnet.h  resnet.h
scripts/: README.md  build_and_test.sh  generate_operation.sh
spack/: repo.yaml
src/: CMakeLists.txt  exception.cpp  fill_utilities_device.cu  fill_utilities_host.cpp  init_finalize.cpp  makefile  memory_utilities.cu  memory_utilities_device.cu  memorymanager.cpp  tensor.cpp  tensor_utilities.cpp  utilities_internal.cpp  wrapper.cpp
src/compute/: add_op.cpp  compute_graph.cpp  geadd_internal.cpp  geadd_internal_device.cu  gemm_internal.cpp  gradients.cpp  gradtable.cpp  makefile  matmul_op.cpp  op_utilities.cpp  sigmoid_internal.cpp  sigmoid_internal_device.cu  sigmoid_op.cpp  tanh_internal.cpp  tanh_internal_device.cu  tanh_op.cpp  variable.cpp
src/compute/add/: add_op.cpp  addop.cpp  geadd_internal.cpp  geadd_internal_device.cu
src/compute/batchnorm/: batchnormop.cpp
src/compute/conv2dforward/: conv2dforward_internal.cpp  conv2dforward_internal_device.cu  conv2dforwardop.cpp
src/compute/crossentropy/: crossentropy_internal.cpp  crossentropy_internal_device.cu  crossentropyop.cpp
src/compute/cuda/: conv2dforwardop.cpp
src/compute/div/: div_internal.cpp  div_internal_device.cu  divop.cpp
src/compute/dot/: dotop.cpp
src/compute/dropout/: dropoutop.cpp
src/compute/flatten/: flattenop.cpp
src/compute/gcnconv/: gcnconvop.cpp
src/compute/linearforward/: linearforwardop.cpp
src/compute/log/: log_internal.cpp  log_internal_device.cu  logop.cpp
src/compute/matmul/: gemm_internal.cpp  matmul_op.cpp  matmulop.cpp
src/compute/meansquarederror/: meansquarederror.cpp
src/compute/negative/: negative_internal.cpp  negative_internal_device.cu  negativeop.cpp
src/compute/onednn/: conv2dforwardop.cpp
src/compute/pooling/: poolingop.cpp
src/compute/pow/: pow_internal.cpp  pow_internal_device.cu  powop.cpp
src/compute/product/: product_internal.cpp  product_internal_device.cu  productop.cpp
src/compute/reducesum/: reducesum_internal.cpp  reducesum_internal_device.cu  reducesumop.cpp
src/compute/relu/: relu_internal.cpp  relu_internal_device.cu  reluop.cpp
src/compute/scalarproduct/: scalarproduct_internal.cpp  scalarproduct_internal_device.cu  scalarproductop.cpp
src/compute/sigmoid/: sigmoid_internal.cpp  sigmoid_internal_device.cu  sigmoid_op.cpp
src/compute/softmax/: softmaxop.cpp
src/compute/sum/: sum_internal.cpp  sum_internal_device.cu  sumop.cpp
src/compute/tanh/: tanh_internal.cpp  tanh_internal_device.cu  tanh_op.cpp  tanhop.cpp
src/compute/transpose/: transpose_internal.cpp  transpose_internal_device.cu  transposeop.cpp
src/data/: CIFAR10.cpp  CIFAR100.cpp  ImageNet2012.cpp  MNIST.cpp  image_io.cpp  utils.cpp
src/dataloader/linear/: linearloader.cpp
src/layer/: input_layer.cpp  layer_utilities.cpp  wrapper.cpp
src/layer/activation/: activation_layer.cpp  activationlayer.cpp
src/layer/batchnorm/: batchnormlayer.cpp
src/layer/conv2d/: conv2dlayer.cpp
src/layer/dropout/: dropoutlayer.cpp
src/layer/flatten/: flattenlayer.cpp
src/layer/fullyconnected/: fullyconnected_layer.cpp  fullyconnectedlayer.cpp
src/layer/gcnconv/: kwgcnlayer.cpp
src/layer/input/: input_layer.cpp  inputlayer.cpp
src/layer/output/: output_layer.cpp  outputlayer.cpp
src/layer/pooling/: poolinglayer.cpp
src/layer/residual/: residuallayer.cpp
src/layer/shortcut/: shortcutlayer.cpp
src/math/: abs.cpp  abs_device.cu  add.cpp  argmax.cpp  batchnorm.cpp  bias_add.cpp  bias_add_device.cu  concat.cpp  conv2d.cpp  crossentropy.cpp  crossentropy_device.cu  dot.cpp  dot.cu  dropout.cpp  launch_math_kernel.cu  makefile  matmul.cpp  negate.cpp  pooling.cpp  pow.cpp  pow_device.cu  product.cpp  reduce_sum.cpp  relu.cpp  scalar_tensor_product.cpp  scalar_tensor_product_device.cu  softmax.cpp  sum.cpp  sum_device.cu  tile.cpp  wrappers.cpp
src/math/optimizer_math/: adagrad.cpp  adagrad_device.cu  adam.cpp  adam_device.cu  rmsprop.cpp  rmsprop_device.cu  sgd_momentum.cpp  sgd_momentum_device.cu
src/memory/: memory_internal_device.cu  memory_utilities_device.cu  memorymanager.cpp
src/model/neuralnetwork/: neuralnetwork.cpp  neuralnetwork_utilities.cpp
src/optimizer/: distributed_momentum_sgd.cpp
src/optimizer/adagrad/: adagrad.cpp
src/optimizer/adam/: adam.cpp
src/optimizer/gradientdescent/: gradientdescent.cpp  gradientdescent_internal.cpp  gradientdescent_internal_device.cu
src/optimizer/rmsprop/: rmsprop.cpp
src/sparseMatrix/: sparseMatrix.cpp
src/tensor/: fill_internal_device.cu  fill_internal_host.cpp  fill_utilities_device.cu  fill_utilities_host.cpp  tensor.cpp  tensor_internal.cpp  tensor_io.cpp  tensor_utilities.cpp
testing/: CMakeLists.txt  makefile  run_tests.sh  testing_compute_graph.cpp  testing_dataloader.cpp  testing_grad.cpp  testing_layers.cpp  testing_math.cpp  testing_memorymanager.cpp  testing_model.cpp  testing_tensor.cpp  utilities.h
(+2608 files in other folders)
